--- a/static/style/login.css
+++ b/static/style/login.css
@@ -30,3 +30,7 @@ a.btn-link.text-muted:active, a.btn-link.text-muted:focus {color: #1a8fb4;}
 #owl-login.password .hand.hand-r{-webkit-transform: translateX(-42px) translateY(-15px) scale(0.7); -moz-transform: translateX(-42px) translateY(-15px) scale(0.7); -o-transform: translateX(-42px) translateY(-15px) scale(0.7); -ms-transform: translateX(-42px) translateY(-15px) scale(0.7); transform: translateX(-42px) translateY(-15px) scale(0.7); } 
 #owl-login.password .arms .arm {-webkit-transform: translateY(-40px) translateX(40px); -moz-transform: translateY(-40px) translateX(40px); -o-transform: translateY(-40px) translateX(40px); -ms-transform: translateY(-40px) translateX(40px); transform: translateY(-40px) translateX(40px); }
 #owl-login.password .arms .arm.arm-r{-webkit-transform: translateY(-40px) translateX(-40px) scaleX(-1); -moz-transform: translateY(-40px) translateX(-40px) scaleX(-1); -o-transform: translateY(-40px) translateX(-40px) scaleX(-1); -ms-transform: translateY(-40px) translateX(-40px) scaleX(-1); transform: translateY(-40px) translateX(-40px) scaleX(-1); }
+.error{
+	color:red;
+	padding-bottom:10px;
+}
