--- a/static/style/common.css
+++ b/static/style/common.css
@@ -1,18 +1,32 @@
 .bor{border:1px solid #ccc}
 .bg-blue{background:#417eb7;}
 .bg-gray{background-color:#eee;}
-.header{background:#F7F7F7;background:-webkit-linear-gradient(#F7F7F7,#E6E6E6);background:-moz-linear-gradient(#F7F7F7,#E6E6E6);background:linear-gradient(#F7F7F7,#E6E6E6);text-align:right;padding-top:10px;border-bottom:2px solid #417EB7;box-shadow:0 1px #fff;padding-right:20px;}
-.header a{padding:0 20px;color:#000;text-shadow:0 1px #fff;margin-left:10px;display:inline-block;height: 100%;line-height: 35px;border-radius:5px 5px 0 0;border-bottom:none;}
-.header a.active{border:1px solid #25619A;background:#5097DA;background:-webkit-linear-gradient(#5097DA,#4280BA);background:-moz-linear-gradient(#5097DA,#4280BA);background:linear-gradient(#5097DA,#4280BA);color:#fff;text-shadow:0 2px #000;}
+.header{background:#F7F7F7;background:-webkit-linear-gradient(#F7F7F7,#E6E6E6);background:-moz-linear-gradient(#F7F7F7,#E6E6E6);background:linear-gradient(#F7F7F7,#E6E6E6);padding-top:10px;border-bottom:2px solid #324252;box-shadow:0 1px #fff;padding-right:20px;}
+.userName{padding:0 20px;color:#000;text-shadow:0 1px #fff;margin-left:10px;display:inline-block;line-height: 35px;border-radius:5px 5px 0 0;border-bottom:none;}
+.userName span{
+	padding-left:5px;
+	display:inline-block;
+}
+.userName span:first-child{position:relative;padding-right:10px;}
+.userName span:first-child:after{
+	content:'';
+	position:absolute;
+	right:0;
+	top:50%;
+	transform:translate(-50%,-50%);
+	width:1px;
+	height:16px;
+	background:#293949;
+}
+.headerRight{
+	float:right;
+	position:relative;
+}
 /*通用侧边栏*/
-.list-sideBar{width:265px;background:#417eb7;box-shadow:1px 1px 2px #4E8DC8;position:absolute;top:0;left:0;}
-.list-ul li{height: 32px;line-height: 32px;padding-left: 36px;font-size:14px;}
-.list-ul li a{color:#B9DDFF;}
-.list-ul li.active{background:#2D689F;}
-.list-ul li span{border-top:2px dotted #194B7B;border-right:2px dotted #194B7B;width: 8px;height: 8px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);display:inline-block;margin-right: 10px;vertical-align:middle;}
-.list-ul li:first-child{background:#F9F9F9;color:#000;font-weight:bold;margin-bottom: 15px;}
-.list-ul li:first-child span{width: 16px;height: 16px;background:#B5FF9B;background:-webkit-linear-gradient(#B5FF9B,#7AC759);background:-moz-linear-gradient(#B5FF9B,#7AC759);border:1px solid #5BB832;border-radius:50%;box-shadow:0 0 1px #C3C3C3;position:relative;}
-.list-ul li:first-child em{border-left:2px solid #fff;border-bottom:2px solid #fff;width: 8px;height: 6px;-webkit-transform:rotate(-90deg);-moz-transform:rotate(-90deg);-ms-transform:rotate(-90deg);display:inline-block;position:absolute;top:50%;left:50%;margin-top:-4px;margin-left:-5px;}
+.list-sideBar{width:265px;background:#293949;box-shadow:1px 1px 2px #4E8DC8;position:absolute;top:0;left:0;}
+.list-ul li{height: 50px;line-height: 50px;padding-left: 36px;font-size:16px;border:1px solid #324252;}
+.list-ul li a{color:#F0F0F0;}
+.list-ul li span{border-top:2px dotted #F0F0F0;border-right:2px dotted #F0F0F0;width: 8px;height: 8px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);display:inline-block;margin-right: 10px;vertical-align:middle;}
 .list-ul li:not(:nth-child(1)):hover{background:#2D689F;}
 .list-con{margin-left:290px;}
 .list-con .title{height: 40px;line-height: 40px;border-bottom:1px solid #D6D6D6;box-shadow:0 1px #fff;color:#000;font-size: 16px;font-weight:bold;}
