--- a/static/style/common.css
+++ b/static/style/common.css
@@ -27,7 +27,7 @@
 .list-ul li{height: 50px;line-height: 50px;padding-left: 36px;font-size:16px;border:1px solid #324252;}
 .list-ul li a{color:#F0F0F0;}
 .list-ul li span{border-top:2px dotted #F0F0F0;border-right:2px dotted #F0F0F0;width: 8px;height: 8px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);display:inline-block;margin-right: 10px;vertical-align:middle;}
-.list-ul li:not(:nth-child(1)):hover{background:#2D689F;}
+.list-ul li:hover,.list-ul li.active{background:#2e86cb;}
 .list-con{margin-left:290px;}
 .list-con .title{height: 40px;line-height: 40px;border-bottom:1px solid #D6D6D6;box-shadow:0 1px #fff;color:#000;font-size: 16px;font-weight:bold;}
 .list-con header,.add-user{padding:10px;font-weight:bold;}
