--- a/static/style/common.css
+++ b/static/style/common.css
@@ -25,7 +25,7 @@
 /*通用侧边栏*/
 .list-sideBar{width:265px;background:#293949;box-shadow:1px 1px 2px #4E8DC8;position:absolute;top:0;left:0;}
 .list-ul li{height: 50px;line-height: 50px;padding-left: 36px;font-size:16px;border:1px solid #324252;}
-.list-ul li a{color:#F0F0F0;}
+.list-ul li a{color:#F0F0F0;width:100%;height:100%;display:inline-block;}
 .list-ul li span{border-top:2px dotted #F0F0F0;border-right:2px dotted #F0F0F0;width: 8px;height: 8px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);display:inline-block;margin-right: 10px;vertical-align:middle;}
 .list-ul li:hover,.list-ul li.active{background:#2e86cb;}
 .list-con{margin-left:290px;}
